apache-hadoop-helm/templates/hadoop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hadoop-ingress1
spec:
  ingressClassName: nginx
  rules:
    - host: yarn.shaoyou.store
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: my-hadoop-hadoop-yarn-ui
                port:
                  number: 8088
    - host: nn.shaoyou.store
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: my-hadoop-hadoop-hdfs-nn
                port:
                  number: 9870
    - host: my-hadoop-hadoop-yarn-rm
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: my-hadoop-hadoop-yarn-rm
                port:
                  number: 8088
